{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 266,
  "lineage": "12830e32-4cb3-885e-aa6b-d0e6a841d3e3",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:577638400000:security-group/sg-042dc65f4e385b06c",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-042dc65f4e385b06c",
            "ingress": [],
            "name": "my-mern-cluster20241212142647892200000002",
            "name_prefix": "my-mern-cluster",
            "owner_id": "577638400000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-mern-cluster-eks_cluster_sg"
            },
            "tags_all": {
              "Name": "my-mern-cluster-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2700bf7ffbac02d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 0,
          "deposed": "1023550a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:577638400000:security-group/sg-04c9d509f54bb267b",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c9d509f54bb267b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03e0dcf602a5e590e"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "my-mern-cluster20241212134016231900000002",
            "name_prefix": "my-mern-cluster",
            "owner_id": "577638400000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-mern-cluster-eks_cluster_sg"
            },
            "tags_all": {
              "Name": "my-mern-cluster-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a95d21779a38776"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 0,
          "deposed": "56078251",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:577638400000:security-group/sg-0efd7108bb8960564",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0efd7108bb8960564",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-093af1c871b807bb4"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "my-mern-cluster20241212132240787100000001",
            "name_prefix": "my-mern-cluster",
            "owner_id": "577638400000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-mern-cluster-eks_cluster_sg"
            },
            "tags_all": {
              "Name": "my-mern-cluster-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1618610e5d60237"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 0,
          "deposed": "6370928b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:577638400000:security-group/sg-065414438b84dc636",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-065414438b84dc636",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a2637108aef182cf"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "my-mern-cluster20241212135130030700000002",
            "name_prefix": "my-mern-cluster",
            "owner_id": "577638400000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-mern-cluster-eks_cluster_sg"
            },
            "tags_all": {
              "Name": "my-mern-cluster-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c34daf5ac0014c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:577638400000:security-group/sg-0ddae021aa5819605",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-0ddae021aa5819605",
            "ingress": [],
            "name": "my-mern-cluster20241212142647577000000001",
            "name_prefix": "my-mern-cluster",
            "owner_id": "577638400000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-mern-cluster-eks_worker_sg",
              "kubernetes.io/cluster/my-mern-cluster": "owned"
            },
            "tags_all": {
              "Name": "my-mern-cluster-eks_worker_sg",
              "kubernetes.io/cluster/my-mern-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2700bf7ffbac02d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 0,
          "deposed": "67c8ad9d",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:577638400000:security-group/sg-03e0dcf602a5e590e",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-03e0dcf602a5e590e",
            "ingress": [],
            "name": "my-mern-cluster20241212134014102100000001",
            "name_prefix": "my-mern-cluster",
            "owner_id": "577638400000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-mern-cluster-eks_worker_sg",
              "kubernetes.io/cluster/my-mern-cluster": "owned"
            },
            "tags_all": {
              "Name": "my-mern-cluster-eks_worker_sg",
              "kubernetes.io/cluster/my-mern-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a95d21779a38776"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 0,
          "deposed": "8e46d5de",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:577638400000:security-group/sg-093af1c871b807bb4",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-093af1c871b807bb4",
            "ingress": [],
            "name": "my-mern-cluster20241212132247236800000002",
            "name_prefix": "my-mern-cluster",
            "owner_id": "577638400000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-mern-cluster-eks_worker_sg",
              "kubernetes.io/cluster/my-mern-cluster": "owned"
            },
            "tags_all": {
              "Name": "my-mern-cluster-eks_worker_sg",
              "kubernetes.io/cluster/my-mern-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1618610e5d60237"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 0,
          "deposed": "a50c4de8",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:577638400000:security-group/sg-0a2637108aef182cf",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a2637108aef182cf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-065414438b84dc636"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-065414438b84dc636"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "my-mern-cluster20241212135126926700000001",
            "name_prefix": "my-mern-cluster",
            "owner_id": "577638400000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-mern-cluster-eks_worker_sg",
              "kubernetes.io/cluster/my-mern-cluster": "owned"
            },
            "tags_all": {
              "Name": "my-mern-cluster-eks_worker_sg",
              "kubernetes.io/cluster/my-mern-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c34daf5ac0014c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-54268456",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-042dc65f4e385b06c",
            "security_group_rule_id": "sgr-0d38f92e477f7b07e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 0,
          "deposed": "afa132cd",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-3571016656",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0efd7108bb8960564",
            "security_group_rule_id": "sgr-0d5e4c9152365e268",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 0,
          "deposed": "b3e544c4",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-2519297052",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04c9d509f54bb267b",
            "security_group_rule_id": "sgr-0dd025c117387bef5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 0,
          "deposed": "c2ae0de2",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-606669151",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-065414438b84dc636",
            "security_group_rule_id": "sgr-0ede40409fe026829",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-2325809791",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-042dc65f4e385b06c",
            "security_group_rule_id": "sgr-01366193b03f93a8a",
            "self": false,
            "source_security_group_id": "sg-0ddae021aa5819605",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 0,
          "deposed": "963d31de",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-3716904531",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-065414438b84dc636",
            "security_group_rule_id": "sgr-07fdd80af417440b2",
            "self": false,
            "source_security_group_id": "sg-0a2637108aef182cf",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 0,
          "deposed": "c5a2efd4",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-2857277828",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04c9d509f54bb267b",
            "security_group_rule_id": "sgr-0025178acce768e97",
            "self": false,
            "source_security_group_id": "sg-03e0dcf602a5e590e",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 0,
          "deposed": "d1b60fc9",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-132621507",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0efd7108bb8960564",
            "security_group_rule_id": "sgr-02b8ffa922138a161",
            "self": false,
            "source_security_group_id": "sg-093af1c871b807bb4",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_private_access_cidrs_source",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_private_access_sg_source",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-426705547",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ddae021aa5819605",
            "security_group_rule_id": "sgr-09fa5987b089cec2d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-1946296986",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ddae021aa5819605",
            "security_group_rule_id": "sgr-02d62357f3a9c2bbc",
            "self": false,
            "source_security_group_id": "sg-042dc65f4e385b06c",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-3833011431",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ddae021aa5819605",
            "security_group_rule_id": "sgr-0e7c2c6659571bf4a",
            "self": false,
            "source_security_group_id": "sg-042dc65f4e385b06c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-3330614156",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ddae021aa5819605",
            "security_group_rule_id": "sgr-0a423d0c1495c670a",
            "self": false,
            "source_security_group_id": "sg-0ddae021aa5819605",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:577638400000:network-acl/acl-0daa47a9445481ed3",
            "default_network_acl_id": "acl-0daa47a9445481ed3",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0daa47a9445481ed3",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "577638400000",
            "subnet_ids": [
              "subnet-008961a5c28cb4306",
              "subnet-04ba75a3c86d781f3",
              "subnet-05ea091e1c5495060",
              "subnet-088f5c4c13e6a9efc",
              "subnet-0a010bd095c5e9e6a",
              "subnet-0f1254854d2a52e67"
            ],
            "tags": {
              "Name": "my-latest-vpc-default"
            },
            "tags_all": {
              "Name": "my-latest-vpc-default"
            },
            "vpc_id": "vpc-0b2700bf7ffbac02d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:577638400000:route-table/rtb-078824da0fcf79617",
            "default_route_table_id": "rtb-078824da0fcf79617",
            "id": "rtb-078824da0fcf79617",
            "owner_id": "577638400000",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "my-latest-vpc-default"
            },
            "tags_all": {
              "Name": "my-latest-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0b2700bf7ffbac02d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:577638400000:security-group/sg-036075748fb68a3ae",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-036075748fb68a3ae",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "577638400000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-latest-vpc-default"
            },
            "tags_all": {
              "Name": "my-latest-vpc-default"
            },
            "vpc_id": "vpc-0b2700bf7ffbac02d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0674251cd0eb73f78",
            "domain": "vpc",
            "id": "eipalloc-0674251cd0eb73f78",
            "network_border_group": "us-east-1",
            "private_dns": "ip-10-0-101-147.ec2.internal",
            "public_dns": "ec2-98-85-111-50.compute-1.amazonaws.com",
            "public_ip": "98.85.111.50",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-latest-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "my-latest-vpc-us-east-1a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:577638400000:internet-gateway/igw-06b66cd9e0bcc9cf3",
            "id": "igw-06b66cd9e0bcc9cf3",
            "owner_id": "577638400000",
            "tags": {
              "Name": "my-latest-vpc"
            },
            "tags_all": {
              "Name": "my-latest-vpc"
            },
            "vpc_id": "vpc-0b2700bf7ffbac02d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0674251cd0eb73f78",
            "association_id": "eipassoc-0c0ee7ca8b2028db9",
            "connectivity_type": "public",
            "id": "nat-052c992d3a8bd93c1",
            "network_interface_id": "eni-0cda471cb310d97bf",
            "private_ip": "10.0.101.118",
            "public_ip": "98.85.111.50",
            "subnet_id": "subnet-05ea091e1c5495060",
            "tags": {
              "Name": "my-latest-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "my-latest-vpc-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0516684382743b7781080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-052c992d3a8bd93c1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0516684382743b778",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06b66cd9e0bcc9cf3",
            "id": "r-rtb-0c41ad4361c8063751080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c41ad4361c806375",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:577638400000:route-table/rtb-0516684382743b778",
            "id": "rtb-0516684382743b778",
            "owner_id": "577638400000",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-latest-vpc-private"
            },
            "tags_all": {
              "Name": "my-latest-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2700bf7ffbac02d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:577638400000:route-table/rtb-0c41ad4361c806375",
            "id": "rtb-0c41ad4361c806375",
            "owner_id": "577638400000",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-latest-vpc-public"
            },
            "tags_all": {
              "Name": "my-latest-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2700bf7ffbac02d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05aecb1a072a9e36d",
            "route_table_id": "rtb-0516684382743b778",
            "subnet_id": "subnet-008961a5c28cb4306"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060604bfe97e4dceb",
            "route_table_id": "rtb-0516684382743b778",
            "subnet_id": "subnet-088f5c4c13e6a9efc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b9423f31a6baf0e",
            "route_table_id": "rtb-0516684382743b778",
            "subnet_id": "subnet-0f1254854d2a52e67"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a88547710c5da91",
            "route_table_id": "rtb-0c41ad4361c806375",
            "subnet_id": "subnet-05ea091e1c5495060"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092ac6a7d12b06b95",
            "route_table_id": "rtb-0c41ad4361c806375",
            "subnet_id": "subnet-0a010bd095c5e9e6a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee5d71ebb5af84fe",
            "route_table_id": "rtb-0c41ad4361c806375",
            "subnet_id": "subnet-04ba75a3c86d781f3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:577638400000:subnet/subnet-008961a5c28cb4306",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008961a5c28cb4306",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "577638400000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-latest-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "my-latest-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-0b2700bf7ffbac02d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 0,
          "deposed": "7619820b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:577638400000:subnet/subnet-09aaab6799c4b340c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09aaab6799c4b340c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "577638400000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "my-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-00a95d21779a38776"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 0,
          "deposed": "b533a57d",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:577638400000:subnet/subnet-0ee5c819e688fb3d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee5c819e688fb3d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "577638400000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "my-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-01c34daf5ac0014c8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:577638400000:subnet/subnet-088f5c4c13e6a9efc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088f5c4c13e6a9efc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "577638400000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-latest-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "my-latest-vpc-private-us-east-1b"
            },
            "vpc_id": "vpc-0b2700bf7ffbac02d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "deposed": "05d2de33",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:577638400000:subnet/subnet-0111f26af44ac2614",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0111f26af44ac2614",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "577638400000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "my-vpc-private-us-east-1b"
            },
            "vpc_id": "vpc-01c34daf5ac0014c8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "deposed": "37ba2819",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:577638400000:subnet/subnet-07254598419184d36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07254598419184d36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "577638400000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "my-vpc-private-us-east-1b"
            },
            "vpc_id": "vpc-00a95d21779a38776"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:577638400000:subnet/subnet-0f1254854d2a52e67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1254854d2a52e67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "577638400000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-latest-vpc-private-us-east-1c"
            },
            "tags_all": {
              "Name": "my-latest-vpc-private-us-east-1c"
            },
            "vpc_id": "vpc-0b2700bf7ffbac02d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "deposed": "33fb11aa",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:577638400000:subnet/subnet-033cbad23ae930b07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033cbad23ae930b07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "577638400000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-private-us-east-1c"
            },
            "tags_all": {
              "Name": "my-vpc-private-us-east-1c"
            },
            "vpc_id": "vpc-01c34daf5ac0014c8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "deposed": "60ec56be",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:577638400000:subnet/subnet-0ef26e662e2eb4c72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef26e662e2eb4c72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "577638400000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-private-us-east-1c"
            },
            "tags_all": {
              "Name": "my-vpc-private-us-east-1c"
            },
            "vpc_id": "vpc-00a95d21779a38776"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:577638400000:subnet/subnet-05ea091e1c5495060",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ea091e1c5495060",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "577638400000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-latest-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "my-latest-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-0b2700bf7ffbac02d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:577638400000:subnet/subnet-0a010bd095c5e9e6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a010bd095c5e9e6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "577638400000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-latest-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Name": "my-latest-vpc-public-us-east-1b"
            },
            "vpc_id": "vpc-0b2700bf7ffbac02d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:577638400000:subnet/subnet-04ba75a3c86d781f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ba75a3c86d781f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "577638400000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-latest-vpc-public-us-east-1c"
            },
            "tags_all": {
              "Name": "my-latest-vpc-public-us-east-1c"
            },
            "vpc_id": "vpc-0b2700bf7ffbac02d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:577638400000:vpc/vpc-0b2700bf7ffbac02d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0daa47a9445481ed3",
            "default_route_table_id": "rtb-078824da0fcf79617",
            "default_security_group_id": "sg-036075748fb68a3ae",
            "dhcp_options_id": "dopt-04cf92a57378f70ff",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b2700bf7ffbac02d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-078824da0fcf79617",
            "owner_id": "577638400000",
            "tags": {
              "Name": "my-latest-vpc"
            },
            "tags_all": {
              "Name": "my-latest-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}